<resources>
    <string name="app_name">Slots</string>
    <string name="copyright">All copyright @Sam-Brother</string>
    <string name="msg_coin">您当前的金币数大于10个，只有当金币总数少于10个时才可以获取额外的金币！！
        \n请您继续游戏，当金币不足时我们会及时通知您！！
        \n祝您好运！！</string>
    <string name="msg_help">
    <b>作者: SamBrother</b>
    \n
    Slot水果机的UI是仿"花果水果机"UI,主要作为游戏开发练手项目，请勿用作其他商业用途！！如若因此牵扯到法律问题，与作者概不相关！！
    \n
    <b>有任何建议或者反馈可以随时联系作者</b>
    </string>
    <string name="app_version_name">1.0.0</string>
    <string name="exit_game">请问您是否确定要退出当前游戏？</string>
    <string name="exit_msg">再按一次退出游戏！</string>
    <string name="OK">确定</string>
    <string name="Cancel">取消</string>
    <string name="exit">退出游戏</string>
    <string name="help">帮助</string>
    <string name="get_coin">获取金币</string>
    <string name="crash_msg">程序出现异常，即将重启！</string>
    <string name="deleteMsg">是否确定要删除全部历史记录？</string>
    <string name="delete_prompt_msg">是否确定要删除该条记录？</string>
    <string name="Notice">删除记录？</string>
</resources>
